# competitive-programming-cpp

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  README.md
data/: out.txt
scripts/: run.sh
src/: main.cpp  template.cpp
src/atcoder/abc120/: c.cpp  d.cpp
src/atcoder/abc357/: e.cpp
src/atcoder/abc399/: c.cpp
src/atcoder/abc407/: a.cpp  d.cpp
src/atcoder/abc408/: a.cpp  b.cpp
src/atcoder/abc412/: a.cpp  b.cpp  c.cpp
src/atcoder/abc413/: a.cpp  c.cpp
src/atcoder/abc420/: d.cpp  e.cpp
src/atcoder/abc426/: a.cpp
src/atcoder/abc431/: c.cpp  d.cpp
src/atcoder/arc198/: a.cpp  b.cpp
